2008-11-21   D. V. Wiebe <getdata@ketiltrout.net>  svn:238
	* src/common.c (_GD_AddData): Moved from getdata.c and made non-static.

	* src/mod.c: Added.

2008-11-20   D. V. Wiebe <getdata@ketiltrout.net>  svn:237
	* configure.ac: Use AC_PROG_CC_C99 again, bump AC_PREREQ to 2.63.
	* m4/c99.m4: Removed.

2008-11-20   D. V. Wiebe <getdata@ketiltrout.net>  svn:236
	* src/endian.c (_GD_FixEndianness): Moved from types.c.

	* src/endian.c: Added.

	* src/encoding.c (_GD_RecodeFragment put_encoding get_encoding): Added.

	* src/foffs.c (_GD_ShiftFragment): Check for GD_EF_SEEK.  Only open the
	input file if not already open.  Check seek success.  Seek on both files.

	* src/getdata.h.in legacy.c: Add GD_E_BAD_ENDIANNESS.
	
	* src/putdata.c (_GD_DoRawOut): Don't divide n_wrote by size.

	* src/slim.c (_GD_SlimSeek) src/raw.c (_GD_RawSeek): Return samples, not
	bytes.

	* src/getdata.c (_GD_DoRaw) src/putdata.c (_GD_DoRawOut): Check seek
	success.

	* src/internal.h: Split the unnecessarily difficult fragment->flags into
	fragment->encoding and fragment->byte_sex.

2008-11-18   D. V. Wiebe <getdata@ketiltrout.net>  svn:232
	* src/open.c (_GD_ParseFragment): Added GD_IGNORE_DUPS flags.
	* test/parse_duplicate_ignore.c: Added.

	* src/internal.h src/getdata.h.in: Moved gd_entry_t->size to
	_gd_private_entry.

	* src/foffs.c (_GD_ShiftFragment): Do the move and cleanup.
	* src/ascii.c (_GD_AsciiTemp) src/raw.c (_GD_RawTemp): Added.

	* src/foffs.c (put_frameoffset64): Check offset parameter for range.

	* src/encoding.c (_GD_SetEncodedName): Added.

	* src/slim.c (_GD_SlimUnlink) src/ascii.c (_GD_AsciiUnlink) src/raw.c
	(_GD_RawUnlink): Removed and replaced by _GD_GenericUnlink.
	* src/ascii.c (_GD_AsciiTouch) src/raw.c (_GD_RawTouch): Removed and replaced
	by _GD_GenericTouch.

	* src/internal.h: Created the _gd_raw_file object. Renamed
	_gd_private_entry->file to _gd_private_entry->filebase.
	* src/encoding.c: Encoding framework updated to work on _gd_raw_file
	objects.
