@@ -350,7 +350,7 @@ extern const char* get_raw_filename(DIRFILE* D, const char* field_code)
   __THROW __gd_nonnull ((1, 2));
 
 extern int put_reference(DIRFILE* D, const char* field_code) __THROW
-  __gd_nonnull ((1, 2));
+__gd_nonnull ((1, 2));
 
 extern const char* dirfilename(DIRFILE* D) __THROW __gd_nonnull ((1));
 
@@ -375,16 +375,16 @@ extern int dirfile_change_const(DIRFILE* D, const char* field_code,
 /* The following functions contain calls to I/O functions, making them
  * cancellation points.  As a result we cannot mark them with __THROW.
  */
-extern DIRFILE* dirfile_open(const char* dirfilename, unsigned int flags)
-  __gd_nonnull ((1));
+extern DIRFILE* dirfile_open(const char* dirfilename,
+    unsigned int flags) __gd_nonnull ((1));
 
 extern int dirfile_include(DIRFILE* D, const char* file, int fragment_index,
     unsigned int flags) __gd_nonnull ((1,2));
 
 extern int dirfile_close(DIRFILE* dirfile);
 
-extern int dirfile_flush(DIRFILE* dirfile, const char* field_code)
-  __gd_nonnull ((1));
+extern int dirfile_flush(DIRFILE* dirfile,
+    const char* field_code) __gd_nonnull ((1));
 
 extern int dirfile_metaflush(DIRFILE* dirfile) __gd_nonnull ((1));
 
@@ -394,8 +394,8 @@ __gd_nonnull((1,2));
 
 extern int dirfile_add(DIRFILE* D, const gd_entry_t* entry) __gd_nonnull((1,2));
 
-extern int dirfile_add_spec(DIRFILE* D, const char* line, int fragment_index)
-  __gd_nonnull ((1,2));
+extern int dirfile_add_spec(DIRFILE* D, const char* line,
+    int fragment_index) __gd_nonnull ((1,2));
 
 extern int put_encoding(DIRFILE* D, unsigned int encoding, int fragment,
     int move) __gd_nonnull ((1));
@@ -417,6 +417,12 @@ extern int dirfile_change_raw(DIRFILE *D, const char *field_code,
 
 extern int dirfile_change_linterp(DIRFILE* D, const char* field_code,
     const char* in_field, const char* table, int move) __gd_nonnull ((1,2));
+
+extern int dirfile_change_spec(DIRFILE* D, const char* line,
+    int move) __gd_nonnull ((1,2));
+
+extern int dirfile_mchange_spec(DIRFILE* D, const char* parent,
+    const char* line, int move) __gd_nonnull ((1,2,3));
 
 /* the following functions are _FILE_OFFSET_BITS sensitive */
 #ifndef __USE_FILE_OFFSET64
@@ -446,8 +452,8 @@ extern off_t __REDIRECT_NTH (get_frameoffset, (DIRFILE* dirfile, int fragment),
 # endif
 
 # ifdef __REDIRECT
-extern off_t __REDIRECT (get_nframes, (DIRFILE* dirfile), get_nframes64)
-  __gd_nonnull ((1));
+extern off_t __REDIRECT (get_nframes, (DIRFILE* dirfile),
+    get_nframes64) __gd_nonnull ((1));
 
 extern size_t __REDIRECT (getdata, (DIRFILE* dirfile, const char *field_code,
       __off64_t first_frame, __off64_t first_samp, size_t num_frames,
@@ -471,8 +477,8 @@ extern int __REDIRECT (put_frameoffset, (DIRFILE* D, __off64_t offset,
 
 /* if requested, declare the LFS transitional extension */
 #ifdef __USE_LARGEFILE64
-extern __off64_t get_frameoffset64(DIRFILE* dirfile, int fragment)
-  __gd_nonnull ((1));
+extern __off64_t get_frameoffset64(DIRFILE* dirfile,
+    int fragment) __gd_nonnull ((1));
 
 extern __off64_t get_nframes64(DIRFILE* dirfile) __gd_nonnull ((1));
 
